test/errors/import_in_function.correct
error: import_in_function.li:2:5: import statements must be at global scope
│ import <io>
│ ~~~~~~~~~~~
│ ^
